Version 0.1.7 * Fix css/html layout issues

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-body                                    { min-height: 800px; overflow: scroll; box-sizing: border-box; pointer-events: none; position: relative; margin: 0; padding:0; font-family: sans-serif; color: #fff; }
+html                                    { overflow-y: scroll; } 
+body                                    { box-sizing: border-box; pointer-events: none; position: relative; margin: 0; padding:0; font-family: sans-serif; color: #fff; }
 .simulation                             { position: fixed; pointer-events: all; z-index: -1; }
 
-.layout                                 { width: 100%; height: 100vh; font-size: medium; display: flex; flex-direction: column; justify-content: space-between; align-items: center; }
+.layout                                 { width: 100%; font-size: medium; display: flex; flex-direction: column; justify-content: space-between; align-items: center; }
 
 .controls                               { width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: flex-start; }
 
@@ -11,13 +12,10 @@ body                                    { min-height: 800px; overflow: scroll; b
 .simulation-button-row                  { display: flex; flex-direction: row; }
 .simulation-button                      { pointer-events: all; font-size: medium; width: 5em; height: 2em; border: 0; padding: 0; margin: 0.8em 1em 0.5em 1em; border-radius: 1em; }
 
-.timer                                  { margin: 0; padding: 0; }
-.timer-monospace                        { white-space: pre; font-family: monospace;}
-
 .radio-parameter                        { pointer-events: all; display: flex; flex-direction: row; }
 .radio-parameter input[type="radio"]    { margin: 0 0.5em 0 0; padding: 0; }
 
-.control-column                         { height: 100vh; display: flex; flex-direction: column; margin: 0; font-size: small; justify-content: flex-end; align-items: center; }
+.control-column                         { display: flex; flex-direction: column; margin: 0; font-size: small; justify-content: flex-end; align-items: center; }
 
 .parameter-column                       { display: flex; width: 20em; flex-direction: column; margin: 1em 1.5em 0 1.5em; font-size: small; }
 
@@ -29,4 +27,5 @@ x-parameter                             { margin: 0 0 0.5em 0; display: flex; fl
 .parameter-button                       { pointer-events: all; border: 0; padding: 0; margin: 0; width: 1.5em; height: 1.5em; border-radius: 1.25em; }
 .parameter-range                        { padding: 0; margin: 0 0.2em; flex: 2; }
 
-.fine-print                             { margin: 0.5em; color: #fffa; font-size: small; }
+.timer                                  { position: fixed; bottom: 2em; width: 100%; display: flex; flex-direction: row; justify-content: center; margin: 0; padding: 0; }
+.fine-print                             { position: fixed; bottom: 1em; width: 100%; display: flex; flex-direction: row; justify-content: center; color: #fffa; font-size: small; }
